--- a/index.html
+++ b/index.html
@@ -71,30 +71,31 @@
                     </div>
                 </div>
           </div>
+          
           <div class="carousel-item">
-                <img src="imagenes/puerto-prefectura.jpg" class="d-block w-100" height: auto alt="mpla">
+                <img src="imagenes/puerto-prefectura.jpg" class="d-block w-100" alt="mpla">
                 <div class="carousel-caption d-flex">
                     <div class="row">
                         <div class="col-0 col-md-4"></div>
-                        <div class="col-12 col-md-8 text-justify tex-md-end">
-                            <h5 class="fs-3">Competencia</h5>
-                            <p>Sus integrantes desarrollan múltiples tareas tales como: navegar y patrullar mares, ríos y lagos; salvaguardar la vida humana en las aguas; combatir la pesca ilegal y la contaminación; realizar tareas como buzos; pilotos; bomberos; oficinistas; técnicos en mantenimiento de servicios (electricistas, informáticos); y a través de la Dirección de Protección Ciudadana, brindar seguridad pública.</p></div>
-                        </div>
-                    </div>
-                </div>
-          </div>
-          <div class="carousel-item">
-                <img src="imagenes/incendio.jpg" class="d-block w-100" alt="incendio">
-                <div class="carousel-caption d-flex">
-                    <div class="row">
-                        <div class="col-0 col-md-4"></div>
-                        <div class="col-12 col-md-8 text-justify tex-md-end">
+                        <div class="col-12 col-md-8 text-justify tex-md-end mb-4">
                             <h5 class="fs-3">Actividades</h5>
                             <p>El personal también se forma para combatir el narcotráfico en las fronteras fluviales; regular el tráfico marítimo; y a nivel internacional, actuar como enlaces en Bolivia, Chile, EE.UU., Inglaterra, Paraguay y Perú, entre otras actividades.</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="carousel-item">
+                <img src="imagenes/incendio.jpg" class="d-block w-100" alt="incendio">
+                <div class="carousel-caption d-flex">
+                    <div class="row">
+                        <div class="col-0 col-md-4"></div>
+                        <div class="col-12 col-md-8 text-justify tex-md-end mb-4">
+                            <h5 class="fs-3">Competencia</h5>
+                            <p>Sus integrantes desarrollan múltiples tareas tales como: navegar y patrullar mares, ríos y lagos; salvaguardar la vida humana en las aguas; combatir la pesca ilegal y la contaminación; realizar tareas como buzos; pilotos; bomberos; oficinistas; técnicos en mantenimiento de servicios (electricistas, informáticos); y a través de la Dirección de Protección Ciudadana, brindar seguridad pública.</p></div>
+                        </div>
+                    </div>
+                </div>
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -109,7 +110,7 @@
     <div class="text-center mx-1 my-4 fs-3 fw-bold">
        <div>Noticias</div> 
     </div>
-<div class="container mb-3">
+    <div class="container mb-3">
         <div class="card-group mx-1">
             <div class="card">
                 <img src="imagenes/Visita.jpeg" class="card-img-top" alt="IslaMartinGarcia">
@@ -206,10 +207,11 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Youtube</a>
           </li>
-      </ul>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    </ul>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
